KRAFDBCK-11199 ie nav overlap fix

--- a/coeus-webapp/src/main/webapp/css/common/core.css
+++ b/coeus-webapp/src/main/webapp/css/common/core.css
@@ -176,6 +176,11 @@ input[type="checkbox"] {
     color: orange;
 }
 
+/** ie specific fix **/
+[data-role="Page"] {
+    display: block !important;
+}
+
 /** Document info styling **/
 
 .uif-documentInfo {
